--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="styles.css">
   <title>Vanilla JavaScript App</title>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@[VERSION]"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@[VERSION]"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
   <!-- Import vega-embed -->
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@[VERSION]"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>  
 </head>
 
 <body>
