--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <div id="vis"></div>
 
   <script type="text/javascript">
-    var spec = "https://raw.githubusercontent.com/vega/vega/master/docs/examples/bar-chart.vg.json";
+    var spec = "https://raw.githubusercontent.com/jlumsla/my-first-static-web-app/main/agentbylastactivity.json";
     vegaEmbed('#vis', spec).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
